2005-11-04 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: replace SIGNAL() by ISR().
	* doc/api/faq.dox: (Ditto.)
	* doc/api/interrupts.dox: (Ditto.)
	* doc/examples/demo/demo.c: (Ditto.)
	* doc/examples/demo/demo.dox: (Ditto.)
	* include/avr/interrupt.h: Add ISR(), move enable_external_int()
	and timer_enable_int() to compat/deprecated.h, move SIGNAL()
	here (by now).
	* include/avr/signal.h: Move SIGNAL() and EMPTY_INTERRUPT() to
	interrupt.h, issue a #warning.
	* include/compat/Makefile.am: add deprecated.h.
	* include/compat/deprecated.h: New file.  Collect deprecated
	items from avr/signal.h.

2005-11-04 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/avr-recv.c: Drop long since obsolete examples.
	* doc/examples/io.c: (Ditto.)
	* doc/examples/prg: (Ditto.)
	* doc/examples/printf.h: (Ditto.)
	* doc/examples/progmem.c: (Ditto.)
	* doc/examples/send_byte.s: (Ditto.)
	* doc/examples/signal.c: (Ditto.)

2005-11-03 Anatoly Sokolov <aesok@pautinka.net>

	* libc/string/strsep.S: Make labels local, add Id line, 
	use movw when possible, use X_movw instead LOAD_X/LOAD_Z, optimize.
	* libc/string/strlcat.S: Make labels local, add Id line, 
	use movw when possible, use X_movw instead LOAD_X/LOAD_Z.
	* libc/string/strlcpy.S: (Ditto.)
	* libc/string/strtok_r.S: (Ditto.)

2005-10-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io1200.h: Rework headers, replace comma by underscore if needed.
	* include/avr/io2313.h: (Ditto.)
	* include/avr/io2323.h: (Ditto.)
	* include/avr/io2333.h: (Ditto.)
	* include/avr/io2343.h: (Ditto.)
	* include/avr/io4414.h: (Ditto.)
	* include/avr/io4433.h: (Ditto.)
	* include/avr/io4434.h: (Ditto.)
	* include/avr/io8515.h: (Ditto.)
	* include/avr/io8535.h: (Ditto.)
	* include/avr/io86r401.h: (Ditto.)
	* include/avr/io90pwmx.h: (Ditto.)
	* include/avr/iom103.h: (Ditto.)
	* include/avr/iom128.h: (Ditto.)
	* include/avr/iom16.h: (Ditto.)
	* include/avr/iom161.h: (Ditto.)
	* include/avr/iom162.h: (Ditto.)